-------------------------- aqp 1.5-2 (2013-04-09) --------------------------
* panel.depth_function() now prints "contributing fraction" values in the same color as corresponding depth-function lines and shaded areas

-------------------------- aqp 1.5-1 (2013-03-07) --------------------------
* removed excessive checking in SoilProfileCollection init code, this may speed things up
  - previously identified horizonation errors may no longer result in ERRORS; be sure to test
* test_hz_logic() now more useful:
  - always checks for NA and overlapping horizons
  - no longer called with initialization of SoilProfileCollection objects
  - note that default behavior has changed since version 1.5
  - moved related documentation to test_hz_logic manual page
* new mini-vignette on dealing with bad data (dealing-with-bad-data.html)
* better documentation for slice()
* new warnings related to missing data in the grouping variable passed to slab()


-------------------------- aqp 1.5 (2013-02-24) --------------------------
* profileApply() can now return arbitrary objects = new subsetting/transformation possibilities
  - see ?profileApply for examples
* panel.depth_function() can now display contributing fraction values with grouped data
  - see multi-variate example in ?slab

-------------------------- aqp 1.4-7 (2013-01-24) --------------------------
* HTML version of all documentation (including images) auto-generated via knitr and available on the r-forge website
* new function: texture.triangle.low.rv.high() plots texture data with low-high range defined by quantiles

-------------------------- aqp 1.4-6 (2013-01-03) --------------------------
* updated documentation and SoilProfileCollection tutorial here:
  - https://r-forge.r-project.org/scm/viewvc.php/*checkout*/docs/aqp/aqp-intro.html?root=aqp
* plans laid for parallel processing in slab() and profileApply() via 'parallel' package
* plotSPC() gets a 'density' argument for shaded coloring of horizons
