@@ -10,7 +10,7 @@
 
 \usage{
 panel.depth_function(x, y, id, upper = NA, lower = NA, 
-subscripts = NULL, groups = NULL, sync.colors=FALSE, cf=NA, ...)
+subscripts = NULL, groups = NULL, sync.colors=FALSE, cf=NA, cf.col=NA, ...)
 }
 
 \arguments{
@@ -23,10 +23,11 @@ subscripts = NULL, groups = NULL, sync.colors=FALSE, cf=NA, ...)
   \item{groups}{grouping data (generated by calling lattice function)}
   \item{sync.colors}{optionally sync the fill color within the region bounded by (lower--upper) with the line colors}
   \item{cf}{optionally annotate contributing fraction data at regular depth intervals see \code{\link{slab}}}
+  \item{cf.col}{optionall color for contributing fraction values, typically used to override the line color}
   \item{\dots}{further arguments to lower-level lattice plotting functions, see below}
 }
 \details{
-This function can be used to replace \code{panel.superpose} when plotting depth function data. When requested, contributing fraction data are printed using colors the same color as corresponding depth function lines.
+This function can be used to replace \code{panel.superpose} when plotting depth function data. When requested, contributing fraction data are printed using colors the same color as corresponding depth function lines unless a single color value is given via \code{cf.col}.
 }
 
 \references{http://casoilresource.lawr.ucdavis.edu/}
