@@ -1,5 +1,8 @@
 -------------------------- aqp 1.5-2 (2013-04-09) --------------------------
 * panel.depth_function() now prints "contributing fraction" values in the same color as corresponding depth-function lines and shaded areas
+* panel.depth_function() gains an argument 'cf.col' for manually specifying the CF color
+* prepanel.depth_function() now extends x-lim by 5% in either direction for cleaner-looking plots
+* added some details to slab() documentation
 
 -------------------------- aqp 1.5-1 (2013-03-07) --------------------------
 * removed excessive checking in SoilProfileCollection init code, this may speed things up
